--- a/resources/css/index_bc.css
+++ b/resources/css/index_bc.css
@@ -1268,6 +1268,10 @@ template {
 * ------------------------------
 */
 .k-dialog .k-dialog-content.sm {
+  width: 410px;
+}
+
+.k-dialog .k-dialog-content.xsm {
   width: 450px;
 }
 
@@ -1275,8 +1279,20 @@ template {
   width: 600px;
 }
 
+.k-dialog .k-dialog-content.xmd {
+  width: 700px;
+}
+
+.k-dialog .k-dialog-content.md2 {
+  width: 800px;
+}
+
 .k-dialog .k-dialog-content.lg {
   width: 900px;
+}
+
+.k-dialog .k-dialog-content.xl {
+  width: 960px;
 }
 
 .k-window.k-dialog .k-dialog-titlebar {
@@ -1948,10 +1964,15 @@ td .form-group.col > * + * {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  min-height: 28px;
 }
 
 .search-control .search-line + .search-line {
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
 .search-control .form-group {
@@ -2087,6 +2108,90 @@ td .form-group.col > * + * {
 * listbox
 * ------------------------------
 */
+/*
+* ------------------------------
+* autocomplete
+* ------------------------------
+*/
+.k-autocomplete {
+  border-radius: 2px;
+  background-clip: padding-box;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: inherit;
+  font-size: 14px;
+  line-height: 1.4285714286;
+  white-space: nowrap;
+  display: -ms-inline-flexbox;
+  display: -webkit-inline-box;
+  display: inline-flex;
+  -ms-flex-flow: row nowrap;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+          flex-flow: row nowrap;
+  -ms-flex-align: stretch;
+  -webkit-box-align: stretch;
+          align-items: stretch;
+  vertical-align: middle;
+  -webkit-transition: all .1s ease;
+  transition: all .1s ease;
+  position: relative;
+  cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.k-autocomplete .k-ie11 {
+  background-clip: border-box;
+}
+
+.k-autocomplete .k-i-loading {
+  width: 24px;
+  height: 28px;
+}
+
+.k-autocomplete .k-clear-value {
+  visibility: hidden;
+}
+
+.k-autocomplete:hover .k-clear-value, .k-autocomplete.k-state-hover .k-clear-value, .k-autocomplete.k-state-focused .k-clear-value, .k-autocomplete.k-state-focus .k-clear-value {
+  visibility: visible;
+}
+
+.k-autocomplete:focus-within .k-clear-value {
+  visibility: visible;
+}
+
+.k-autocomplete.k-header,
+.k-autocomplete {
+  border-color: rgba(0, 0, 0, 0.08);
+  color: #424242;
+  background-color: #ffffff;
+}
+
+.k-autocomplete.k-header:hover, .k-autocomplete.k-header.k-state-hover,
+.k-autocomplete:hover,
+.k-autocomplete.k-state-hover {
+  border-color: rgba(0, 0, 0, 0.16);
+}
+
+.k-autocomplete.k-header.k-state-open, .k-autocomplete.k-header.k-state-focused, .k-autocomplete.k-header.k-state-focus,
+.k-autocomplete.k-state-open,
+.k-autocomplete.k-state-focused,
+.k-autocomplete.k-state-focus {
+  border-color: rgba(0, 0, 0, 0.16);
+}
+
+.k-autocomplete.k-header:focus-within,
+.k-autocomplete:focus-within {
+  border-color: rgba(0, 0, 0, 0.16);
+}
+
+.k-list-scroller {
+  overflow: auto;
+}
+
 /*
 * ------------------------------
 * input - common
@@ -3684,6 +3789,57 @@ th .required {
   background-image: url("../images_bc/icon/icon_contact_07.svg");
 }
 
+.status-banner.settlement .list {
+  position: relative;
+  background-position: calc(100% - 24px) 14px;
+  background-size: 26px 26px;
+  background-repeat: no-repeat;
+}
+
+.status-banner.settlement .list::after {
+  font-size: 13px;
+  line-height: 22px;
+  letter-spacing: -0.65px;
+  position: absolute;
+  right: 25px;
+  bottom: 13px;
+  display: block;
+  font-weight: 500;
+  line-height: 19px;
+}
+
+.status-banner.settlement .list.done {
+  background-image: url("../images_bc/icon/icon_complete.svg");
+  border: 1px solid #1e6c42;
+  background-color: #d4eee0;
+}
+
+.status-banner.settlement .list.done::after {
+  content: '완료';
+  color: #1e6c42;
+}
+
+.status-banner.settlement .list.wait {
+  background-image: url("../images_bc/icon/icon_waiting.svg");
+}
+
+.status-banner.settlement .list.wait::after {
+  content: '대기';
+  color: #666;
+}
+
+.status-banner.settlement .list.ing {
+  background-image: url("../images_bc/icon/icon_proceeding.svg");
+  border: 1px solid #0e4194;
+  background-color: #cfdef5;
+}
+
+.status-banner.settlement .list.ing::after {
+  content: '진행중';
+  right: 20px;
+  color: #0e4194;
+}
+
 .active .h-ico.menu1 {
   background-image: url("../images_bc/icon/icon_standard_selected.svg");
 }
@@ -3758,6 +3914,13 @@ th .required {
   background-image: url("../images_bc/icon/btn_filter_default.svg");
   background-size: 8px 15px;
   margin-right: -10px;
+}
+
+.k-i-k-i-x {
+  width: 12px;
+  height: 12px;
+  background-image: url("../images_bc/icon/btn_X.svg");
+  background-size: 12px 12px;
 }
 
 .k-i-close {
@@ -4107,6 +4270,10 @@ button {
 
 .mt-8 {
   margin-top: 8px !important;
+}
+
+.mt-6 {
+  margin-top: 6px !important;
 }
 
 .mt-10 {
@@ -4593,6 +4760,22 @@ td .divide + .divide {
   color: #f14747;
 }
 
+.title-box .list-box .list .label {
+  color: #777;
+}
+
+.title-box .list-box .list .desc {
+  color: #222;
+}
+
+.title-box .list-box .list + .list {
+  margin-left: 20px;
+}
+
+.title-box .list-box .list.blue .label, .title-box .list-box .list.blue .desc {
+  color: #0e4194;
+}
+
 /*
 * ------------------------------
 *  리스트
@@ -4748,7 +4931,8 @@ td .divide + .divide {
   border: 0;
 }
 
-.filebox .h-input:disabled, .filebox .h-input:disabled:focus {
+.filebox .h-input:disabled, .filebox .h-input:disabled:focus,
+.filebox .k-input:disabled, .filebox .k-input:disabled:focus {
   background-color: #fff;
   color: #aaa;
 }
@@ -4927,7 +5111,7 @@ td .divide + .divide {
   color: #555;
 }
 
-.list-info .h-input {
+.list-info .h-input, .list-info .k-input {
   display: inline-block;
 }
 
@@ -5001,6 +5185,54 @@ td .divide + .divide {
   font-weight: bold;
 }
 
+.status-banner.settlement {
+  margin-bottom: 4px;
+}
+
+.status-banner.settlement .list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  padding: 14px 20px;
+  background: #fff;
+  border: 1px solid #e4e4e4;
+}
+
+.status-banner.settlement .list + .list {
+  margin-left: 8px;
+}
+
+.status-banner.settlement .tit {
+  font-size: 17px;
+  line-height: 26px;
+  letter-spacing: -0.85px;
+  font-weight: 500;
+  color: #222;
+  white-space: nowrap;
+}
+
+.status-banner.settlement .time {
+  font-size: 14px;
+  line-height: 26px;
+  letter-spacing: -0.7px;
+  line-height: 19px;
+  color: #666;
+  font-weight: 400;
+}
+
 .info-banner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -5046,6 +5278,10 @@ td .divide + .divide {
 /************************************************************
 **  file tree area
 ************************************************************/
+.table + .tree-box {
+  border-top: none;
+}
+
 .tree-box {
   height: 180px;
   border: 1px solid #ccc;
@@ -5959,7 +6195,7 @@ td .divide + .divide {
   font-weight: 500;
 }
 
-.mobile-wrap .mobile-body .contents .h-input {
+.mobile-wrap .mobile-body .contents .h-input, .mobile-wrap .mobile-body .contents .k-input {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
@@ -5971,28 +6207,28 @@ td .divide + .divide {
   font-weight: 500;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::-webkit-input-placeholder {
+.mobile-wrap .mobile-body .contents .h-input::-webkit-input-placeholder, .mobile-wrap .mobile-body .contents .k-input::-webkit-input-placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
   font-weight: 500 !important;
 }
 
-.mobile-wrap .mobile-body .contents .h-input:-ms-input-placeholder {
+.mobile-wrap .mobile-body .contents .h-input:-ms-input-placeholder, .mobile-wrap .mobile-body .contents .k-input:-ms-input-placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
   font-weight: 500 !important;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::-ms-input-placeholder {
+.mobile-wrap .mobile-body .contents .h-input::-ms-input-placeholder, .mobile-wrap .mobile-body .contents .k-input::-ms-input-placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
   font-weight: 500 !important;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::placeholder {
+.mobile-wrap .mobile-body .contents .h-input::placeholder, .mobile-wrap .mobile-body .contents .k-input::placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
@@ -6151,6 +6387,15 @@ td .divide + .divide {
 * Title Group
 * ------------------------------
 */
+.title-box .badge {
+  height: 18px;
+  margin-left: 6px;
+  padding: 0 6px;
+  font-size: 12px;
+  line-height: 17px;
+  font-weight: 400;
+}
+
 .title-box.sm {
   min-height: 26px;
   margin: 20px 0 6px;
@@ -6357,34 +6602,34 @@ td .divide + .divide {
 * Mobile Group
 * ------------------------------
 */
-.mobile-wrap .mobile-body .contents .h-input {
+.mobile-wrap .mobile-body .contents .h-input, .mobile-wrap .mobile-body .contents .k-input {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::-webkit-input-placeholder {
-  font-size: 15px;
-  line-height: 26px;
-  letter-spacing: -0.75px;
-  font-weight: 500 !important;
-}
-
-.mobile-wrap .mobile-body .contents .h-input:-ms-input-placeholder {
+.mobile-wrap .mobile-body .contents .h-input::-webkit-input-placeholder, .mobile-wrap .mobile-body .contents .k-input::-webkit-input-placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
   font-weight: 500 !important;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::-ms-input-placeholder {
+.mobile-wrap .mobile-body .contents .h-input:-ms-input-placeholder, .mobile-wrap .mobile-body .contents .k-input:-ms-input-placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
   font-weight: 500 !important;
 }
 
-.mobile-wrap .mobile-body .contents .h-input::placeholder {
+.mobile-wrap .mobile-body .contents .h-input::-ms-input-placeholder, .mobile-wrap .mobile-body .contents .k-input::-ms-input-placeholder {
+  font-size: 15px;
+  line-height: 26px;
+  letter-spacing: -0.75px;
+  font-weight: 500 !important;
+}
+
+.mobile-wrap .mobile-body .contents .h-input::placeholder, .mobile-wrap .mobile-body .contents .k-input::placeholder {
   font-size: 15px;
   line-height: 26px;
   letter-spacing: -0.75px;
@@ -6424,6 +6669,32 @@ td .divide + .divide {
   line-height: 24px;
   letter-spacing: -0.65px;
   color: #222;
+}
+
+.tree-box {
+  border: 1px solid #e4e4e4;
+}
+
+.detail-title {
+  font-size: 13px;
+  line-height: 24px;
+  letter-spacing: -0.65px;
+  height: 30px;
+  padding: 0 10px;
+  line-height: 30px;
+  text-align: left;
+}
+
+.detail-box {
+  height: 100px;
+  border: 1px solid #e4e4e4;
+}
+
+.detail-box .list {
+  font-size: 13px;
+  line-height: 24px;
+  letter-spacing: -0.65px;
+  padding: 4px 0;
 }
 
 .k-checkbox-label,
