--- a/resources/css/scss/modules/_input.scss
+++ b/resources/css/scss/modules/_input.scss
@@ -225,6 +225,7 @@
 			border-radius: 3px 0px 0px 3px;
 			// padding-left: 10px;
 			text-align: left;
+			font-weight: 400;
 		}
 		.k-button {
 			min-width: 0;
