--- a/resources/css/scss/modules/_popup.scss
+++ b/resources/css/scss/modules/_popup.scss
@@ -253,10 +253,29 @@
         }
     }
     .content-group {
+        display: flex;
+        flex-direction: column;
         height: 100%;
         background: $white;
         &.has-check {
             padding-bottom: 30px + 40px;
+        }
+        .content {
+            overflow: auto;
+            padding-bottom: 20px;
+        }
+        .footer {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: -10px;
+            margin-left: -30px;
+            margin-right: -30px;
+            padding: 20px 30px 0;
+            border-top: 1px solid $gray-a;
+            .btn-box {
+                margin-top: 0;
+            }
         }
     }
 }
@@ -306,6 +325,7 @@
         color: $gray-7;
         line-height: 22px;
     }
+    
 }
 .btn-box {
     margin-top: 20px;
